[package]
name = "anchor-spl"
version = "0.9.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
edition = "2018"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
devnet = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.9.0", features = ["derive"] }
lazy_static = "1.4.0"
serum_dex = { git = "https://github.com/secretshardul/serum-dex", branch = "market-state-functions", features = ["no-entrypoint"] }
solana-program = "1.6.6"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
