[package]
name = "cfo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "cfo"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "../../../../lang" }
anchor-spl = { path = "../../../../spl" }
swap = { path = "/home/armaniferrante/Documents/code/src/github.com/project-serum/swap/programs/swap", features = ["cpi"] }
spl-token = { version ="3.1.1", features = ["no-entrypoint"] }
